Attempt at fixing wrap of tweet overflowing into footer

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -78,7 +78,7 @@ article > p {
   overflow-wrap: break-word;
   align-self: center;
   width: 95%;
-  height: 2.5em;
+  height: 3.5em;
   padding-left: 1em;
   border-style: solid;
   border-width: 0 0 4px 0;
